// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrantAdapter grantToExtractLine adapts correctly 1`] = `
{
  "action": "objet",
  "askedAmount": 30000,
  "assoName": "nomRNA",
  "assoRna": "W000000000",
  "estabAddress": "adresse",
  "exercice": 2023,
  "financialCenter": "AA01/0776-C001-4000 - UO DGER XXXX-C001",
  "grantedAmount": 15000,
  "instructor": "serviceInstructeur",
  "measure": "dispositif",
  "paidAmount": 179976.6,
  "paymentDate": "2025-11-20",
  "postalCode": "31170",
  "program": "aggregated",
  "siret": "10000000000001",
  "status": "Accordé",
}
`;

exports[`GrantAdapter grantToExtractLine adapts correctly with no application 1`] = `
{
  "action": undefined,
  "askedAmount": undefined,
  "assoName": "nomRNA",
  "assoRna": "W000000000",
  "estabAddress": "adresse",
  "exercice": 2023,
  "financialCenter": "AA01/0776-C001-4000 - UO DGER XXXX-C001",
  "grantedAmount": undefined,
  "instructor": undefined,
  "measure": undefined,
  "paidAmount": 179976.6,
  "paymentDate": "2025-11-20",
  "postalCode": undefined,
  "program": "aggregated",
  "siret": "100000000",
  "status": undefined,
}
`;

exports[`GrantAdapter grantToExtractLine adapts correctly with no payment 1`] = `
{
  "action": "objet",
  "askedAmount": 30000,
  "assoName": "nomRNA",
  "assoRna": "W000000000",
  "estabAddress": "adresse",
  "exercice": 2023,
  "financialCenter": undefined,
  "grantedAmount": 15000,
  "instructor": "serviceInstructeur",
  "measure": "dispositif",
  "paidAmount": 0,
  "paymentDate": undefined,
  "postalCode": "31170",
  "program": "aggregated",
  "siret": "10000000000001",
  "status": "Accordé",
}
`;
